--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,10 @@
 <%= link_to "Practice", root_path, :class => 'brand' %>
 <ul class="nav">
+
   <% if user_signed_in? %>
+  <li>
+    <%= link_to 'Tasks', tasks_path, :method => 'get'%>
+  </li>
     <li>
     <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
     </li>
