--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -26,5 +26,6 @@
     <li>
     <%= link_to 'Sign up', new_user_registration_path %>
     </li>
+      <li><%=	 link_to "Sign in with twitter", "/auth/twitter/" %></li>
   <% end %>
 </ul>
